fix comment's time lalayout issue when input multiple line comments

--- a/hotShare-mobile/client/posts/commentBar.less
+++ b/hotShare-mobile/client/posts/commentBar.less
@@ -11,7 +11,7 @@
 .commentBar .content .boxTitle{position: relative;padding: 8px 15px}
 .commentBar .content .boxTitle span{position: absolute;right: 10px;}
 .commentBar .content .boxTitle span i{color: #aaa;font-size: 24px;}
-.commentBar .content .eachComment{position: relative;min-height: 90px;}
+.commentBar .content .eachComment{min-height: 90px;display: inline-block;width: 100%;}
 .commentBar .content .eachComment .icon{border-radius: 50%;margin: 10px;margin-top: 20px;}
 .commentBar .content .eachComment .userName{display: inline-block;font-weight: bold;color: #000}
 .commentBar .content .eachComment .createAt{display: inline-block;position:relative; color: #000;margin-right:-100px;}
@@ -22,7 +22,7 @@
 .commentBar .content .eachComment .personName {  padding-left:0px; color:black; font-weight:600;}
 .commentBar .content .eachComment .personSay {   padding-left:0px; color:#000; font-weight:300;word-wrap: break-word;}
 .commentBar .content .eachComment .round { -webkit-border-radius: 4px; -moz-border-radius: 4px; border-radius: 4px; }
-.commentBar .content .eachComment .time { position:relative; top: 45px; color:#000; font-weight:300;}
+.commentBar .content .eachComment .time { color:#000; font-weight:300;position: absolute;right:5px;vertical-align: top;}
 .commentBar .content .eachComment .bubble{
     background-color: #F2F2F2;
     border-radius: 5px;
